# repomd

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark.py  benchmark_results.json  build_errors.txt  check.json  check_err.txt  errors.txt  format_test.py  repo.md  repomd_benchmark_report.docx  ultra_benchmark.py  workspace_errors.txt
api/: Cargo.toml  Dockerfile
api/src/: main.rs
benchmarks/: benchmark_ui.html
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: assemble.rs  compress.rs  discover.rs  ingest.rs  lib.rs
extensions/github-action/: action.yml
web/: Dockerfile  package-lock.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/version/: route.ts
web/src/components/: UpdateManager.tsx
