[package]
name = "repomd-api"
version = "0.1.0"
edition = "2021"

[dependencies]
repomd-core = { path = "../core" }
axum = "0.7"
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "fast-rng"] }
