[package]
name = "repomd"
version = "0.2.0"
edition = "2021"
description = "Any repo. One command. Perfect context. Semantic compression for LLMs."
authors = ["Ardelyo <rilardelyo@gmail.com>"]
license = "MIT"
repository = "https://github.com/ardelyo/repomd"
homepage = "https://github.com/ardelyo/repomd"
keywords = ["llm", "context", "repository", "compression", "ai"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "repomd"
path = "src/main.rs"

[dependencies]
repomd-core = { path = "../core" }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
arboard = "3.3"
tokio = { version = "1.35", features = ["full"] }
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
comfy-table = "7"
human_bytes = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }

