[package]
name = "repomd-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tempfile = "3.10"
ignore = "0.4"
tiktoken-rs = "0.6"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
walkdir = "2.5"
mime_guess = "2.0"
tree-sitter = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-go = "0.20"
tree-sitter-rust = "0.20"
regex = "1.10"
