[package]
name = "repomd-core"
version = "1.6.2"

edition = "2021"
description = "Core semantic compression and repository analysis for repomd"
authors = ["Ardelyo <rilardelyo@gmail.com>"]
license = "MIT"
repository = "https://github.com/ardelyo/repomd"
homepage = "https://github.com/ardelyo/repomd"
keywords = ["llm", "context", "repository", "compression", "ai"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
tempfile = "3.10"
ignore = "0.4"
tiktoken-rs = "0.6"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
walkdir = "2.5"
mime_guess = "2.0"
tree-sitter = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-go = "0.20"
tree-sitter-rust = "0.20"
regex = "1.10"
